--- a/teniz.css
+++ b/teniz.css
@@ -27,11 +27,17 @@ hr {
 .buttonrad {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 14px;
     color: black;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
+	width:145px;
+}
+
+.bluebutton {
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .waviy {
@@ -136,7 +142,7 @@ hr {
 #pzlhdr, #pzl {
   font-weight: bold;
   font-size: 11px;
-  margin-right: 7px;
+  margin-right: 0px;
 } 
 
 #bbhdr {
