--- a/teniz.css
+++ b/teniz.css
@@ -130,7 +130,7 @@ hr {
 #glt {
   font-size: 16px;
   font-weight:bold;
-  text-decoration: underline; 
+  //text-decoration: underline; 
   color:#3a3a3c;;
 }
 
@@ -293,8 +293,8 @@ hr {
 
 .histile {
   /* Box */
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   /* border: 2px solid #3a3a3c; */
   margin: 1px;
   color: black;
@@ -302,16 +302,21 @@ hr {
   display: grid;
   place-items: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.6rem;
+  font-size: 1rem;
   font-weight: bold;
 }
+
 
 #try1,#try2, #try3, #try4, #try5, #try6 {
   /* Box */
   margin-left:100px;
   margin-right:20px;
   height: 20px;
-  border: 1.5px solid #3a3a3c;
+  /* border: 2px solid #3a3a3c; */
+}
+
+.tryborder{
+	border: 2px solid #3a3a3c; 
 }
 
 
