--- a/teniz.css
+++ b/teniz.css
@@ -19,6 +19,31 @@ hr {
   width: 400px;
 }
 
+#submitbutton, #answertext
+{ border: none;
+  border-radius: 2px;
+ }
+
+#result {
+  width:260px;
+  background-color: white;
+  color:black;
+  text-align:left;
+  margin: 0 auto;
+  font-size:10pt;
+
+}
+#result ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+#result ul li {
+  padding: 5px 0;
+
+}
+
+
 .revealcol {
     font-weight: bold;
     color: #6AAA64;
@@ -131,7 +156,8 @@ hr {
   font-size: 16px;
   font-weight:bold;
   //text-decoration: underline; 
-  color:#3a3a3c;;
+  //color:#3a3a3c;;
+  color:#dc143c;;
 }
 
 #title {
@@ -312,11 +338,9 @@ hr {
   margin-left:100px;
   margin-right:20px;
   height: 20px;
-  border: 2px solid #3a3a3c;
+  //border: 2px solid #3a3a3c;
+  border: 2px solid #dc143c;
 }
-
-
-
 
 .email {
   font-size: 30px;
