--- a/teniz.css
+++ b/teniz.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
 }
 
+
 a { color: #fff; } /* CSS link color */
 a:hover { color: #fff; } /* CSS link color */
 a { text-decoration: none; }
@@ -19,30 +20,62 @@ hr {
   width: 400px;
 }
 
+.containers {
+  margin: 0px auto;
+  width: 250px;
+}
+
+/* The point of this tutorial is here */
+.form {
+  display: flex;
+  margin:0;
+
+}
+
+.search-field {
+  width: 100%;
+  padding: 5px 35px 5px 15px;
+  border: none;
+  border-radius: 100px;
+  outline: none;
+}
+
+.search-button {
+  background: transparent;
+  border: none;
+  outline: none;
+  margin-left: -33px;
+}
+
+.search-button img {
+  width: 20px;
+  height: 20px;
+  object-fit: cover;
+}
+
+
 #submitbutton, #answertext
 { border: none;
-  border-radius: 2px;
+  border-radius: 0px;
  }
 
 #result {
-  width:260px;
+  width:250px;
   background-color: white;
   color:black;
   text-align:left;
   margin: 0 auto;
   font-size:10pt;
-
 }
+
 #result ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 #result ul li {
-  padding: 5px 0;
-
+  padding: 1px 0;
 }
-
 
 .revealcol {
     font-weight: bold;
