--- a/teniz.css
+++ b/teniz.css
@@ -74,12 +74,16 @@ hr {
   margin: 0;
 }
 #result ul li {
-  padding: 1px 0;
+  padding: 2px;
 }
 
 .revealcol {
     font-weight: bold;
     color: #6AAA64;
+}
+
+.revealicon {
+	font-size:30px;
 }
 
 .revealsiz {
@@ -100,6 +104,19 @@ hr {
     background-color: #fff;
     border-color: #fff;
 	width:145px;
+}
+
+.buttonmode{
+  border-radius: 12px;
+    font-weight: bold;
+    font-size: 10px;
+    color: black;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #fff;
+	width:80px;
+	margin-bottom:10px;
+	margin-top:5px;
 }
 
 .bluebutton {
@@ -186,11 +203,16 @@ hr {
 }
 
 #glt {
+  /* margin-left:95px; */
+  /* margin-right:15px;	 */
   font-size: 16px;
   font-weight:bold;
   //text-decoration: underline; 
-  //color:#3a3a3c;;
-  color:#dc143c;;
+  //color:#3a3a3c;
+  //color:#dc143c;
+  color:#FFF;
+  font-family : Courier New;
+  
 }
 
 #title {
@@ -237,7 +259,7 @@ hr {
   width: 350;
   margin: 0 auto;
   margin-top: 3px;
-  background-image: url("pitch.jpg");
+  /* background-image: url("pitch.jpg"); */
   background-position: center;
 }
 
@@ -287,6 +309,21 @@ hr {
   text-align: center;
 }
 
+.trydetail {
+  width: 345;
+  margin: 0 auto;
+  margin-top: 0px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-around;
+  border: 1px solid #FFF;
+  border-radius: 0px;
+  margin-bottom: 10px;
+ font-size:13px;
+}
+
 #stats {
   font-size: 11px;
   font-weight: bold;
@@ -310,7 +347,7 @@ hr {
 }
 
 #answer {
-  width: 300px;
+  width: 330px;
   height: 0px;
   margin: 0 auto;
   margin-top: 0px;
@@ -318,11 +355,16 @@ hr {
   display: flex;
   flex-wrap: wrap;
   color: red;
-  font-size: 13px;
+  font-size: 14px;
   /* font-family: Georgia, serif; */
-  font-weight: bold;
+  font-weight: bolder;
   justify-content: center;
-  align-items: center;  
+  align-items: center; 
+  font-family: 'Courier New', monospace;
+}
+
+.smallfont {
+  font-size : 8px;
 }
 
 .headerimage {
@@ -368,11 +410,24 @@ hr {
 
 #try1,#try2, #try3, #try4, #try5, #try6 {
   /* Box */
-  margin-left:100px;
-  margin-right:20px;
+  /* margin-left:95px; */
+  /* margin-right:15px; */
   height: 20px;
   //border: 2px solid #3a3a3c;
   border: 2px solid #dc143c;
+  font-size:13px;
+  font-weight: bold;
+  border-radius:5px;
+  display: grid;
+  align-items: center; 
+}
+
+div.scroll {
+background-color: #fe1ggf;
+width: 550px;
+height: 230px;
+overflow: scroll;
+padding: 15px;
 }
 
 .email {
@@ -380,7 +435,7 @@ hr {
 }
 
 .zoom-in-out-box {
-  animation: zoom-in-zoom-out 1s;
+  animation: zoom-in-zoom-out 1.5s;
 }
 
 @keyframes zoom-in-zoom-out {
@@ -404,6 +459,26 @@ hr {
     transform: scale(0, 0);
   }
 }
+
+
+.zoom-in-box {
+  animation: zoom-in 0.25s;
+}
+
+@keyframes zoom-in {
+  0% {
+    transform: scale(1, 1);
+  }
+
+  50% {
+    transform: scale(1.25, 1.25);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
+}
+
 
 .animated {
   animation: flip 0.5s ease;
@@ -750,4 +825,3 @@ hr {
     font-size: 20px;
   }
 }
-
