--- a/teniz.css
+++ b/teniz.css
@@ -424,7 +424,7 @@ hr {
 
 div.scroll {
 background-color: #fe1ggf;
-width: 550px;
+/* width: 550px; */
 height: 230px;
 overflow: scroll;
 padding: 15px;
