--- a/teniz.css
+++ b/teniz.css
@@ -20,6 +20,19 @@ hr {
   width: 400px;
 }
 
+
+table {
+ font-size:10px;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
 .containers {
   margin: 0px auto;
   width: 250px;
@@ -90,6 +103,10 @@ hr {
     font-size:14px;
 }
 
+.GSsiz {
+    font-size:10px;
+}
+
 .howtogif {
   width: 250px;
   height: auto;
@@ -129,6 +146,7 @@ hr {
 }
 
 .waviy span {
+  font-family: 'Alfa Slab One', cursive;
   position: relative;
   display: inline-block;
   font-size: 12px;
@@ -173,9 +191,15 @@ hr {
 }
 
 .waviy1 {
-  position: relative;
-  -webkit-box-reflect: below -10px linear-gradient(transparent, rgba(0, 0, 0, .2));
-  font-size: 30px;
+  -webkit-box-reflect: below -10px linear-gradient(transparent, rgba(0,0,0,.2));
+  font-size: 40px;
+	position: absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 2;
+	right: 2;
+	top:30px;
+	text-align: center;
 }
 
 .waviy1 span {
@@ -216,11 +240,10 @@ hr {
 }
 
 #title {
-  font-size: 30px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  margin-top: 10px;
-  position: relative;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-top: 0px;
 }
 
 #footer {
@@ -245,6 +268,7 @@ hr {
   font-weight: bold;
   font-size: 14px;
   margin-left: 20px;
+  color: #6AAA64;
 } 
 
 
@@ -327,7 +351,7 @@ hr {
   font-size: 11px;
   font-weight: bold;
   letter-spacing: 2px;
-  width: 400;
+  width: 375;
   position: absolute;
   margin-left: auto;
   margin-right: auto;
@@ -343,6 +367,12 @@ hr {
   align-items: flex-start;
   justify-content: space-between;
   text-align: center;
+}
+
+#points-item, #tier-item {
+  font-size: 11px;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 #answer {
@@ -678,6 +708,56 @@ padding: 15px;
   text-align:justify;
 }
 
+.fbmodal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  border: 1px solid black;
+  border-radius: 5%;
+  z-index: 5;
+  background-color: black;
+  width: 400px;
+  max-width: 100%;
+}
+
+.fbmodal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.fbmodal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid white;
+  color: white;
+
+}
+
+.fbmodal-header .fbmodal-title {
+  font-size: 1.25rem;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.fbmodal-header .close-button {
+  font-size: 1.25rem;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+.fbmodal-body {
+  padding: 10px 15px;
+  text-align: left;
+  color: lightgray;
+  font-size: 12px;
+  text-align:justify;
+}
+
 #additionalhint {
   color: white;
   font-size: 30px;
@@ -796,6 +876,23 @@ padding: 15px;
 }
 
 #overlay2.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+#overlay3 {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: GrayText;
+  opacity: 0;
+  pointer-events: none;
+  transition: 200ms ease-in-out;
+}
+
+#overlay3.active {
   opacity: 1;
   pointer-events: all;
 }
