--- a/teniz.css
+++ b/teniz.css
@@ -150,10 +150,10 @@ td, th {
   position: relative;
   display: inline-block;
   font-size: 12px;
-  color: #fff;
+  color: #ff0000;
   text-transform: uppercase;
   animation: flipmain 2s;
-  animation-delay: calc(.075s * var(--i))
+  animation-delay: calc(.075s * var(--i));
 }
 
 @keyframes flipmain {
