--- a/teniz.css
+++ b/teniz.css
@@ -150,7 +150,7 @@ td, th {
   position: relative;
   display: inline-block;
   font-size: 12px;
-  color: #ff0000;
+  color: #6AAA64;
   text-transform: uppercase;
   animation: flipmain 2s;
   animation-delay: calc(.075s * var(--i));
