--- a/teniz.css
+++ b/teniz.css
@@ -141,6 +141,15 @@ td, th {
     font-size: 14px;
 }
 
+.buttonref {
+  border-radius: 12px;
+    font-weight: bold;
+    font-size: 16px;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #fff;
+}
+
 .waviy {
   position: relative;
 }
