--- a/teniz.css
+++ b/teniz.css
@@ -144,10 +144,11 @@ td, th {
 .buttonref {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
+    width: 50px;
 }
 
 .waviy {
