--- a/teniz.css
+++ b/teniz.css
@@ -144,12 +144,12 @@ td, th {
 .buttonref {
   border-radius: 12px;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 12px;
+    color: black;
     border-style: solid;
     background-color: #fff;
     border-color: #fff;
-    width: 75px;
-    align-items: center;		
+	width:40px;
 }
 
 .waviy {
