--- a/teniz.css
+++ b/teniz.css
@@ -377,7 +377,7 @@ td, th {
 
 .tryhdr {
   margin: 0 auto;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 #stats {
@@ -489,7 +489,7 @@ background-color: #fe1ggf;
 /* width: 550px; */
 height: 230px;
 overflow: scroll;
-padding: 5px;
+padding: 0px 15px 15px 15px;
 }
 
 .email {
