--- a/teniz.css
+++ b/teniz.css
@@ -489,7 +489,8 @@ background-color: #fe1ggf;
 /* width: 550px; */
 height: 230px;
 overflow: scroll;
-padding: 0px 15px 15px 15px;
+/* padding: 0px 15px 15px 15px; */
+padding: 0px;
 }
 
 .email {
